--- a/stock/en-tete_v4.tex
+++ b/stock/en-tete_v4.tex
@@ -2,6 +2,7 @@
 \usepackage{amsmath,amssymb,mathtools}
 \usepackage{esint} % intégrale avec un round
 \usepackage{xcolor}
+\usepackage[utf8]{inputenc}
 \usepackage{listings}
 % \usepackage{minted}
 \usepackage{enumitem}
