--- a/français/temps de l'innoncence 1/cours.tex
+++ b/français/temps de l'innoncence 1/cours.tex
@@ -7,21 +7,73 @@
 
 \newcommand{\ttp}[0]{\underline{\textit{Traité Théologico-politique}} }
 
+\newcommand{\lti}{\underline{\textit{Le Temps de l'innocence}} }
+
 
 % Marges et mise en page
 \usepackage[margin=2.5cm]{geometry}
 
 % Titre du document
-\title{Cours de Français\\ \Large \textit{"Des fondements de L'État"}}
+\title{Cours de Français\\ \Large \textit{\lti : introduction générale}}
 \author{Raphaël JONTEF}
 \date{\today}
 
 \begin{document}
 \maketitle
 
+\lti se déroule dans les années 1870. À travers son héros, Newland Archer, le roman porte un regard satyrique et nostalgique sur le milieu très fermé de la haute société New-Yorkaise.\\
+La rédaction de ce roman correspond pour Edith Wharton comme une période de deuil pendant laquelle l'autrice ne se sent plus à sa place dans la société des Années folles (vers 1920) et où elle réagit en tentant de reconstituer le New-York de son enfance. Ce roman est une occasion pour elle de chercher refuge dans le passé.\\
+Il s'agit donc d'une oeuvre à contre-temps (qui relève d'un certain anachronisme), qui a pour vertu de protéger, soigner Edith Wharton.\\
+Il y paradoxalement dans ce roman une critique mordante de ce cercle sociétal étriqué de haute société New-Yorkaise, extrêmement conservatrice.\\\\
+
+Le titre de "\lti" prend alors une valeur ironique, d'abord car il est révolu, ensuite car il n'a peut-être jamais existé, qu'il relève du mythe.\\
+Rétrospectivement, l'innocence est attribuée à quelque chose d'irrémédiablement perdu, à un bon temps passé. Pourtant, \lti renvoie à un corps sociétal extrêmement rigide, dans lequel sont fomentés des complots (Archer et Olenska sont des boucs émissaires) : rien qui ne relève de l'innocence.\\ Un personnage incarne bien l'innocence à première vue (apparence de femme candide), mais en réalité elle va le maintenir dans cette prison dorée que sera pour lui la société New-Yorkaise. Derrière cette candeur se cache quelqu'un de froid, de calculateur. Elle fera tout pour que sa rivale dégage à l'aide d'ultimatums (mariage, grossesse).\\
+May Welland serait donc plutôt ignorante qu'innocente. Elle incarne aussi la frigidité (ignorance du plaisir).
+
+\section{L'autrice}
+Edith Wharton est née en 1852 dans une fammile à la fois riche et éminente (très haut placée) de l'élite New-Yorkaise. Elle compte parmi ses ancêtres des Huguenots, (français ayant immigré en Amérique deux siècles auparavant). Pendant son enfance, la crise économique résultant de la guerre de sécession force la famille à voyager régulièrement en Europe de 1856 à 1862.\\
+Les thèmes récurrents de ses oeuvres sont~:
+\begin{itemize}
+    \item mariages malheureux
+    \item la place de la femme
+    \item le poids des convenances
+\end{itemize}
+
+À 23 ans, Edith Wharton épouse Edward Wharton agé de douze ans de plus, qui est infidèle, et qui est neurasthénique (il est déprimé).\\
+En 1907, elle s'installe à Paris, et décide d'y rester pendant la Première Guerre Mondiale, et décide de s'engager personnellement dans le soutien aux troupes en se rendant dans les tranchées et en contribuant via des reportages à rompre l'\textit{isolationnisme américain} (le fait qu'ils ne participent pas). Edith Wharton sera déclarée Chevalier de la Légion d'Honneur par Henri Poincaré. Pourtant, l'issue de la Première Guerre Mondiale marque la fin d'un monde pour Wharton. Jusque là ses romans se passaient à l'époque contemporaine et en 1920 ça n'était plus le cas.\\\\
+
+En 1913, Elle divorce des suites d'une relation avec Morton Fullerton, écrivain et journaliste américain, grand séducteur, qui initie Edith Wharton aux plaisirs. Pourtant ça ne se lit pas dans \lti : un effleurement de mains en 300 pages.\\\\
+
+Aucun parmi Archer et May ne fait le choix du divorce comme l'a fait l'autrice.\\
+Par ailleurs, Wharton est très riche pour une écrivaine. Elle obtient le prix \textit{Pullitzer}, moment à partir duquel sa carrière s'envole (elle est au panthéon de la culture américaine), grâce à des oeuvres comme~:
+\begin{itemize}
+    \item \underline{\textit{Chez les Heureux du monde}} (1905)
+    \item \underline{\textit{Ethan Frome}} (1905)
+    \item \lti (1920)
+\end{itemize}
+
+Elle écrit jusqu'à sa mort en 1937 et est enterrée au cimetière américain de Versailles.
+
+\section{L'oeuvre}
+
+\subsection{"Il me fallait quitter le présent"}
+Wharton ne se reconnaît plus dans une société qui prend parti de l'industrialisation, qui devient une société de masse. Elle imagine le personnage d'Olenska : une femme défavorisée par le sort, malgré son intelligence supérieure et sa beauté. Le roman est un récit d'une libération manquée : elle a quitté son mari mais pourtant n'est pas libre (retour à la case départ en Europe (pas chez son mari mais bon)). Il y a là un parallèle entre l'autrice et ce personnage : Edit Wharton divorce puis construit une oeuvre en assumant cette sollitude là où Elen Olenska est plus dépendante.\\
+Ce carcan social dont Olenska est victime est celui appelé aux États-Unis du \textit{Gilded Age} (l'Âge d'or, période avoisinant 1870 de transition entre le moment où les vieilles structures aristocratiques héritées de la période colonniale : le \textit{Old New York}, cèdent progressivement la place à l'expansion financière et industrielle).\\\\
+\textit{Old New York} est le titre originel du roman et tous les personnages évoqués (comme les Van Der Luyden) incarnent ce \textit{Old New York}.\\\\
+Via la visite d'un musée d'Ethnlogie, l'autrice illustre cette étude.
+
+\subsection{Un oeuvre à la jonction de deux époques, de deux continents et de deux esthétiques}
+
+L'oeuvre est à la jonction de deux styles littéraires~:
+\begin{itemize}
+    \item le Réalisme : il s'agit d'une fresque sociale de grande ampleur : ça a beau concerner un petit milieu, c'est très riche en personnages. Puis, dans les rapports entre les personnages, tout renvoie aux liens de sang et aux marriages.
+    \item Le modernisme : Le réalisme s'intéressait à l'extérieur des personnages, là où le modernisme s'intéresse à l'exploration de la complexité psychique des personnages (l'expert en ça est Henri James, ami de l'autrice et auteur des \textit{\underline{Ailes de la Colombe}} ou de \textit{\underline{Ce que savait Maisie}}). L'incommunicabilité est également présente dans \lti.
+\end{itemize}
 
 
 
+\subsection{un roman circulaire}
+L'oeuvre se mord la queue : elle s'achève où elle a commencé.\\
+Chapitres 1 à 3 : Newland Archer se rend à l'opéra pour écouter \textit{Faust}. Il arrive en retard (p.22)
 
-\textit{Walden, W.D. Thoreau} 
 \end{document}
