--- a/Informatique spé/C08/cours.tex
+++ b/Informatique spé/C08/cours.tex
@@ -432,14 +432,15 @@ Lorsque deux fils cherchent à accéder à une même ressources et que deux entr
 \end{definition}
 
 \begin{implementation}{demande d'accès à un sémaphore}
-    On note $\mc{S}$ le sémaphore. le fil \code{fil} est celui dans lequel \code{P} est appelée.
+    On note \code{s} le sémaphore. le fil \code{fil} est celui dans lequel \code{P} est appelée.
     \begin{lstLNat}
-    P($\mc{S}$, fil):
-        si $\mc{S}$.compteur <= 0: 
-            // $\mc{S}$ : "Je ne peux pas vous donner l'accès, je garde votre nom."
-            ajouter($\mc{S}$.file, fil)
-            bloquer(fil) // $\code{fil}$ : "Ok, j'attends."
-        $\mc{S}$.compteur = $\mc{S}$.compteur - 1 // un emplacement libre de moins
+    P(s, fil):
+        si s.compteur == 0: 
+            // s : "Je ne peux pas vous donner l'accès, je garde votre nom."
+            ajouter file à s.file
+            tant que compteur == 0:
+                Attendre // fil : "Ok, j'attends."
+        s.compteur = s.compteur - 1 // un emplacement libre de moins
     \end{lstLNat}
 \end{implementation}
 
@@ -731,9 +732,248 @@ Pour formaliser l'étude du comportement des mutex et des sémaphores partagés 
     \end{itemize}
 \end{itemize}
 Pour l'exemple $(i_1, i_2)$ état de $(\code{m1}, \code{m2})$~:
+\textit{à rattraper}
+\section{Applications et schémas de synchronisation courants}
+Au concours, plusieurs types d'exercices peuvent être poséés sur ce chapitre~:
+\begin{enumeratebf}
+    \item implémentation des mutex (algorithmes de Peterson et de la boulangerie de Lamport) et sémaphores (plus guidé car aucun algo n'est exigé au programme)
+    \item comme dans le sujet 0 des mines : utilisation de mutex (parfois sémaphores) pour paralléliser les calculs.
+    \item exercices théoriques de conception de schémas de synchronisation exploitant mutex et sémaphores pour répondre à une situation abstraite décrite : souvent du pseudo-code. On la travaille spécifiquement lors de cours n°4 du mardi 21/01/2024.
+\end{enumeratebf}
+
+\subsection{Attendre la fin d'une exécution.}
+On considère une situaton impliquant deux fils d'exécution réalisant des tâches en deux phases. On pose $s$ un sémaphore de compteur initialement nul et on a l'entrelacement suivant~:
+\begin{center}
+    \begin{tabular}{c|c}
+        \textbf{Fil 1} & \textbf{Fil 2}\\
+        Phase 1 & Phase 1'\\
+        \code{post(s)}& \code{wait(s)}\\
+        Phase 2 & Phase 2'
+    \end{tabular}
+\end{center}
+On veut que le \textbf{Fil 2} ne commence pas la Phase 2' avant que le fil 1 n'ait fini la phase 1.
+
+\begin{implementation}{attendre la fin d'une exécution}
+    \begin{lstC}
+    sem_t attente; // on peut pas faire le sem_init ici !
+
+    void* f1 (void* arg){
+        printf("Début phase 1\n");
+        for(int i = 0; i < 1000; i++){
+            ;
+        }
+        printf("Fin de phase 1\n");
+        sem_post(&attente);
+        printf("Début de phase 2\n");
+        for(int i = 0; i<1000; i++){
+            ;
+        }
+        printf("Fin phase 2\n");
+        return NULL;
+    }
+
+    void* f2 (void* arg){
+        printf("Début phase 1'\n");
+        for(int i = 0; i < 1000; i++){
+            ;
+        }
+        printf("Fin de phase 1'\n");
+        sem_wait(&attente);
+        printf("début de phase 2'\n");
+        for(int i = 0; i<1000; i++){
+            ;
+        }
+        printf("Fin phase 2'\n");
+        return NULL;
+    }
+
+    int main(){
+        sem_init(&attente, 0, 0);
+        pthread_t t1,t2;
+        pthread_create(&t1, NULL, &f1, NULL);
+        pthread_create(&t2, NULL, &f2, NULL);
+        pthread_join(t1, NULL);
+        pthread_join(t2, NULL);
+        sem_destroy(&attente);
+        return 0;
+    }
+    \end{lstC}
+\end{implementation}
+
+\subsection{Rendez-vous ou barrière de synchronisation}
+
+On considère une situation où plusieurs fils doivent réaliser deux phases d'une tâche~:
+\begin{center}
+    \begin{tabular}{c}
+        \textbf{Fil}\\
+        Phase 1\\
+        \code{--barrière de synchronisation--}\\
+        Phase 2
+    \end{tabular}   
+\end{center}
+
+On souhaite qu'aucun des fils n'entame la phase 2 avant que tous les fils aient terminé la phase 1.
+
+\begin{implementation}{Rendez-vous ou barrière de synchronisation}
+    \begin{lstC}
+    #define N 20
+    
+    int compteur = 0;
+    pthread_mutex_t m_compteur = PTHREAD_MUTEX_INITIALIZER;
+    sem_t rendez_vous;
+        
+    void* f(void* arg){
+        printf("Début phase 1 de %d\n",*((int*)arg));
+        for(int i = 0; i < 1000; i++){
+            ;
+        }
+        printf("Fin phase 1 de %d\n",*((int*)arg));
+        pthread_mutex_lock(&m_compteur);
+        compteur = compteur + 1;
+        if (compteur == N){
+            sem_post(&rendez_vous);
+        }
+        pthread_mutex_unlock(&m_compteur);
+        sem_wait(&rendez_vous);
+        sem_post(&rendez_vous);
+        // autre méthode
+        // if (compteur == N){
+        //     for (int i = 0; i<N; i++){
+        //         sem_post(&rendez_vous);
+        //     }
+        // }
+        // pthread_mutex_unlock(&m_compteur);
+        // sem_wait(&rendez_vous);
+        printf("Début phase 2 de %d\n",*((int*)arg));
+        for(int i = 0; i<1000; i++){
+            ;
+        }
+        printf("Fin phase 2 de %d\n",*((int*)arg));
+        return NULL;
+    }
+     
+    int main(){
+        sem_init(&rendez_vous,0,0);
+        pthread_t tab[N];
+        int num[N];
+        for(int i = 0; i<N; i++){
+            num[i] = i;
+            pthread_create(&(tab[i]),NULL,&f,&(num[i]));
+        }
+        for( int i = 0; i<N; i++){
+            pthread_join(tab[i], NULL);
+        }
+        return 0;
+    }
+    \end{lstC}
+\end{implementation}
 
 
+Commentaire des implémentations (une en commentaire, une sans commentaire).\\
+On a un compteur du nombre de fils ayant fini la phase 1. C'est une variable partagée, on la protège par un mutex.\\\\
+Pour attendre le rendez-vous, on utilise un sémaphore de comtpeur initial nul (les fils ne doivent pas attendre tant que \notion{post} n'a pas été fait). \\
+Le $N$-ème fil à incrémenter le compteur doit signaler aux autres qu'ils peuvent passer à la deuxième phase~:
+\begin{itemize}
+    \item Soit il réveille un fil en attente (un post qui débloque un wait) et chaque fil réveille ensuite un autre avec post. Par propagation, ils se réveillent tous.
+    \item Soit le fil fait $N$ fois post pour donner $N$ autorisations de passer.
+\end{itemize}
 
+\subsection{Producteur-consommateur}
+On considère une situation où deux types de fils d'exécutions travaillent en boucle~:
+\begin{itemize}
+    \item les \notion{produteurs} : Ils produisent une ressource puis la dépose dans une case disponible s'il y en a une
+    \item les \notion{consommateurs} : Ils prennent une des ressources disponibles et la "consomment". Une ressource n'est consommée qu'une fois, on a une nouvelle case libre après.
+\end{itemize}
 
+\begin{implementation}{fonctionnement du producteur}
+    \begin{lstLNat}
+    producteur():
+        tant que vrai:
+            r = une ressource produit
+            ranger r dans une case libre
+    \end{lstLNat}
+\end{implementation}
+
+\begin{implementation}{fonctionnement du consommateur}
+    \begin{lstLNat}
+    consommateur():
+        tant que vrai:
+            prendre une ressource dans une case pleine et la consommer
+            libérer la case
+        
+    \end{lstLNat}
+\end{implementation}
+
+code à insérer.
+
+\subsection{Problème du dîner de philosophes}
+
+Des philosophes sont réunis autour d'une table ronde, chacun devant une assiette de spaghettis. Il y a une fourchettes entre deux assiettes consécutives, qui peut être utilisée par le philosophe à droite et le philosophe à gauche uniquement.\\ \textit{voir Fig.5}
+Un philosophe a besoin de deux fourchettes, la droite et la gauche, pour manger.\\
+Les fourchettes sont des ressources partagées, pas par tous les philosophes mais uniquement par deux philosophes adjacents.\\
+Un philosophe alterne entre deux "états" : manger et penser. Lorsqu'il veut manger, il essaye de prendre ses deux fourchettes.\\ \\
+
+\begin{implementation}{première approche}
+    On numérote $(\Phi_i)_{i \in \intint{0}{N-1}}$ les philosophes, $(\psi_j)_{j \in \intint{0}{N-1}}$ les fourchettes.\\
+    On protège chaque fourchettes par un mutex : \code{fourchettes[i]} est un mutex pour la fourchettes \code{i}.
+    \begin{lstLNat}
+    philosophe(i): //i est le numéro du philosophe
+        while(true):
+            penser()
+            lock(fourchettes[i]) // ça cause un problème
+            lock(fourchettes[i+1 mod $N$])
+            manger()
+            unlock(fourchettes[i+1 mod $N$])
+            unlock(fourchettes[i])
+    \end{lstLNat}
+\end{implementation}
+Dans le cas où tous les philosophes se retrouvent au niveau du problème dans le code, tous les mutex (\code{fourchettes[i]}) sont verrouillés et tous les fils sont obligés d'attendre.\\
+Tous les philosophes ont pris leur foruchette droite et attendent que la fourchette gauche soit rendue disponible.\\
+On peut représenter la situation à l'aide d'un \notion{graphe de requêtes} (HP) $G = (S,A)$ où~:
+\begin{itemize}
+    \item $S$ est l'ensemble des ressources (protégées par des mutex ou des sémaphores)
+    \item $A$ est un ensemble d'arêtes $(a,b)$ telles que s'il existe un fil d'exécution qui, ayant acquis la ressource $a$ sans l'avoir libérée, demande l'accès à la ressource $b$.
+    Le graphe ne correspond pas à un quelconque entrelacement, il ne tient compte que de l'ordre des requêtes.
+\end{itemize}
+Avec ce protocole, le graphe de requête est le suivant. \textit{Voir Fig.6}. Le graphe de requête est cyclique.
+
+\begin{remarque}{}{graphe de requête}
+    On peut montrer que si le graphe de requêtes est acyclique, il n'y a pas d'interblocage possible.\\
+    Le cas échéant, en effectuant un tri topologique des sommets, parmi tous les fils demandeurs d'accès simultanément, il y a au moins un fil qui demande l'accès à une ressource disponible (celle qui correspond au plus grand sommet dans l'ordre topologique : le plus "vieux parent"). \textit{ce n'est qu'une idée de démonstration}
+\end{remarque}
+
+\begin{remarque}{}{méthode d'utilisation du graphe de requête}
+    \\begin{enumeratebf}
+        \item construction du graphe
+        \item \begin{itemize}
+            \item s'il est acyclique, absence d'interblocage garantie
+            \item sinon, on cherche autrement (diagrammes de transitions ou exhibition d'une situation d'interblocage)
+        \end{itemize}
+    \end{enumeratebf}
+\end{remarque}
+
+\begin{implementation}{deuxième approche}
+    Il suffit de modifier le comportement d'un philosophe pour rendre le graphe de requête acyclique (on bouge une flèche : \textit{Fig.6 : correction})
+    \begin{lstLNat}
+    philosophe(i):
+        while(true):
+            penser()
+            if(i = N-1){
+                lock(fourchettes[0])
+                lock(fourchettes[N-1])
+                manger()
+                unlock(fourchettes[N-1])
+                unlock(foruchettes[0])
+            }
+            else{
+                lock(fourchettes[i])
+                lock(foruchettes[i+1])
+                manger()
+                unlock(fourchettes[i+1])
+                unlock(fourchettes[i])
+            }
+    \end{lstLNat}
+\end{implementation}
+Le graphe de requête est maintenant acyclique (\textit{Voir fig.5}) : pas d'interblocage.
 
 \input{../../stock/pied.tex}
